fix: :lipstick: fix image stretch

--- a/src/style/menu.css
+++ b/src/style/menu.css
@@ -20,5 +20,6 @@
 	& img {
 		width: 100%;
 		aspect-ratio: 1/1;
+		object-fit: cover;
 	}
 }
